--- a/frontend/src/pages/Register/register.css
+++ b/frontend/src/pages/Register/register.css
@@ -6,7 +6,6 @@
   padding: 25px 30px;
   border-radius: 5px;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-  z-index: 0;
 }
 
 .registerWrapper .title {
@@ -87,7 +86,6 @@ form .button input {
   position: relative;
   text-align: center;
   bottom: 25px;
-  z-index: -1;
 }
 
 .login-register {
